--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 ]
 requires-python = ">=3.13"
 dependencies = [
+    "argparse>=1.4.0",
     "importlib>=1.0.4",
     "numpy>=2.3.2",
     "pandas>=2.3.1",
