README, minimal dataviz done --> add rules manually, dashboard ? manage --plot, argo, tests, methods

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,12 @@ dependencies = [
     "faiss-cpu>=1.11.0.post1",
     "importlib>=1.0.4",
     "jinja2>=3.1.6",
+    "matplotlib>=3.10.5",
+    "matplotlib-venn>=1.1.2",
     "numpy>=2.3.2",
     "pandas>=2.3.1",
     "pathlib>=1.0.1",
+    "plotly>=6.3.0",
     "pyarrow>=21.0.0",
     "rapidfuzz>=3.13.0",
     "s3fs>=2025.7.0",
