--- a/argo-workflows/business-rule-based-data-cleansing.yaml
+++ b/argo-workflows/business-rule-based-data-cleansing.yaml
@@ -14,13 +14,7 @@ spec:
     parameters:
       - name: params-conf-list
         value: '[
-          {"NAF": "naf_2025", "METHODS": "regex"},
-          {"NAF": "naf_2025", "METHODS": "fuzzy"},
-          {"NAF": "naf_2025", "METHODS": "similarity"},
-          {"NAF": "naf_2025", "METHODS": "regex fuzzy"},
-          {"NAF": "naf_2025", "METHODS": "fuzzy similarity"},
-          {"NAF": "naf_2025", "METHODS": "regex similarity"},
-          {"NAF": "naf_2025", "METHODS": "regex fuzzy similarity"}
+          {"NAF": "naf_rev2", "METHODS": "regex fuzzy similarity"}
           ]'
 
   templates:
