--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "jinja2>=3.1.6",
     "matplotlib>=3.10.5",
     "matplotlib-venn>=1.1.2",
+    "nltk>=3.9.1",
     "numpy>=2.3.2",
     "pandas>=2.3.1",
     "pathlib>=1.0.1",
@@ -23,4 +24,5 @@ dependencies = [
     "s3fs>=2025.7.0",
     "sentence-transformers>=5.0.0",
     "tqdm>=4.67.1",
+    "unidecode>=1.4.0",
 ]
