--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.13"
 dependencies = [
     "argparse>=1.4.0",
     "faiss-cpu>=1.11.0.post1",
+    "hydra-core>=1.3.2",
     "importlib>=1.0.4",
     "jinja2>=3.1.6",
     "matplotlib>=3.10.5",
@@ -30,4 +31,5 @@ dependencies = [
 [dependency-groups]
 dev = [
     "pre-commit>=4.3.0",
+    "ruff>=0.12.11",
 ]
