--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,14 @@ version = "0.1.0"
 description = "Hello world"
 readme = "README.md"
 authors = [
-    { name = "nrandriamanana", email = "nathan.randriamanana@eleve.ensai.fr" }
+    { name = "nrandriamanana", email = "nathan.randriamanana@eleve.ensai.fr"},
+    { name = "Meilame Tayebjee", email = "meilame.tayebjee@insee.fr" },
+
 ]
 requires-python = ">=3.13"
 dependencies = [
     "argparse>=1.4.0",
     "faiss-cpu>=1.11.0.post1",
-    "hydra-core>=1.3.2",
     "importlib>=1.0.4",
     "jinja2>=3.1.6",
     "matplotlib>=3.10.5",
