--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "pathlib>=1.0.1",
     "plotly>=6.3.0",
     "pyarrow>=21.0.0",
+    "qdrant-client>=1.15.1",
     "rapidfuzz>=3.13.0",
     "s3fs>=2025.7.0",
     "sentence-transformers>=5.0.0",
