--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "matplotlib-venn>=1.1.2",
     "nltk>=3.9.1",
     "numpy>=2.3.2",
+    "pandarallel>=1.6.5",
     "pandas>=2.3.1",
     "pathlib>=1.0.1",
     "plotly>=6.3.0",
