--- a/argo-workflows/business-rule-based-data-cleansing.yaml
+++ b/argo-workflows/business-rule-based-data-cleansing.yaml
@@ -14,7 +14,7 @@ spec:
     parameters:
       - name: params-conf-list
         value: '[
-          {"NAF": "naf_2025", "METHODS": "regex fuzzy similarity"}
+          {"NAF": "naf_2025", "METHODS": "similarity regex fuzzy"}
           ]'
 
   templates:
