--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ authors = [
 requires-python = ">=3.13"
 dependencies = [
     "argparse>=1.4.0",
+    "cudf-cu13>=0.0.0a0",
     "faiss-cpu>=1.11.0.post1",
     "importlib>=1.0.4",
     "jinja2>=3.1.6",
