--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,13 @@ version = "0.1.0"
 description = "Hello world"
 readme = "README.md"
 authors = [
-    { name = "nrandriamanana", email = "nathan.randriamanana@eleve.ensai.fr"},
+    { name = "nrandriamanana", email = "nathan.randriamanana@insee.fr"},
     { name = "Meilame Tayebjee", email = "meilame.tayebjee@insee.fr" },
 
 ]
 requires-python = ">=3.13"
 dependencies = [
     "argparse>=1.4.0",
-    "cudf-cu13>=0.0.0a0",
     "faiss-cpu>=1.11.0.post1",
     "importlib>=1.0.4",
     "jinja2>=3.1.6",
