--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ requires-python = ">=3.13"
 dependencies = [
     "argparse>=1.4.0",
     "dvc>=3.63.0",
+    "dvc-s3>=3.2.2",
     "faiss-cpu>=1.11.0.post1",
     "importlib>=1.0.4",
     "jinja2>=3.1.6",
